<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tv_mac"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/wlan_mac_add"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_ip"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:text="@string/ip_add"
        android:gravity="center"/>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/device_name"
        android:gravity="center"/>

</LinearLayout>