<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_launcher">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo" />

    <FrameLayout
        android:id="@+id/fl_mobile_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.app.newwisdom.view.viewGourp.LoginItemView
            android:id="@+id/item_view_login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:hint="@string/pls_input_mobile_num"
            app:tv_text="@string/mobile_num" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/fl_mobile_num"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.app.newwisdom.view.viewGourp.LoginItemView
            android:id="@+id/item_view_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:hint="@string/pls_input_verify_num"
            app:tv_text="@string/verify_code" />

        <Button
            android:id="@+id/btn_get_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/color_txt_blue"
            android:text="@string/verify_code"
            android:textColor="@color/color_bg_grey"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/color_txt_blue"
        android:text="@string/login"
        android:textSize="23sp"
        android:textColor="@color/color_bg_grey"
        android:visibility="invisible"
       />


</RelativeLayout>